[tool.poetry]
name = "nfem"
version = "4.0.0"
description = "NFEM Teaching Tool"
authors = [
    "Thomas Oberbichler <thomas.oberbichler@tum.de>",
    "Armin Geiser <armin.geiser@tum.de>",
    "Klaus Sautter <kb.sautter@tum.de>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/StatikTUM/nfem"

[tool.poetry.dependencies]
python = "^3.7"
Mako = "^1.1.6"
matplotlib = "^3.5.1"
notebook = "^6.4"
numpy = "^1.20"
plotly = "^5.5.0"
scipy = "^1.4"
sympy = "^1.7"
importlib-metadata = { version = "^1.0", python = "<3.8" }

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
flake8 = "^4.0.1"
mypy = "^0.931"
yapf = "^0.32.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "pep8"
column_limit = 140