[tool.poetry]
name = "nfem"
version = "4.0.0-dev"
description = "NFEM Teaching Tool"
authors = [
    "Thomas Oberbichler <thomas.oberbichler@tum.de>",
    "Armin Geiser <armin.geiser@tum.de>",
    "Klaus Sautter <kb.sautter@tum.de>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/StatikTUM/nfem"

[tool.poetry.dependencies]
python = "^3.7"
Mako = "^1.1.6"
notebook = [
    { version = "^5.3", python = "<3.8" },
    { version = "^6.4", python = ">=3.8" },
]
numpy = [
    { version = "^1.20", python = "<3.10" },
    { version = "^1.22", python = ">=3.10" },
]
plotly = "^5.5.0"
scipy = [
    { version = "^1.4", python = "<3.10" },
    { version = "^1.7.2", python = ">=3.10,<3.11" },
]
importlib-metadata = { version = "^4.11", python = "<3.8" }
typing-extensions = { version = "^4.1.1", python = "<3.8" }

[tool.poetry.extras]
qt = ["PyQt6-WebEngine"]

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
mypy = "^0.931"
toml = "^0.10.2"
autopep8 = "^1.6.0"
pydoctest = "^0.1.15"
pydocstyle = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
